<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>TAF</groupId>
		<artifactId>TAF-Core</artifactId>
		<version>0.0.3</version>
	</parent>
	<groupId>TAF</groupId>
	<artifactId>TAF-Scripting</artifactId>
	<version>0.0.1</version>
	<name>TAF-Scripting</name>
	<packaging>jar</packaging>
	<url>http://maven.apache.org</url>
	<properties>
		<aspectj.version>1.9.4</aspectj.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<SkriptmateVersion>0.0.3</SkriptmateVersion>
	</properties>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>bintray-epam-reportportal</id>
			<name>bintray</name>
			<url>https://dl.bintray.com/epam/reportportal/</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<!--<systemProperties>
						<property>
							<name>https.proxyHost</name>
							<value>165.225.104.32</value>
						</property>
						<property>
							<name>https.proxyPort</name>
							<value>10223</value>
						</property>
					</systemProperties>-->
					<!-- Enable only while running security tests -->
					<!-- <reuseForks>true</reuseForks> <forkCount>0</forkCount> -->
					<suiteXmlFiles>
						<suiteXmlFile>testNG.xml</suiteXmlFile>
					</suiteXmlFiles>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.1</version>
			</plugin>
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>4.9.0</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>Skriptmate</projectName>
							<buildNumber>1</buildNumber>
							<outputDirectory>
								${project.basedir}/SkriptmateReport/Cucumber/BuildReport-${current.time}</outputDirectory>
							<inputDirectory>${project.build.directory}</inputDirectory>
							<jsonFiles>
								<param>**/cucumber.json</param>
							</jsonFiles>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<dependencies>

<dependency>
    <groupId>org.dom4j</groupId>
    <artifactId>dom4j</artifactId>
    <version>2.1.3</version>
</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>2.1.3</version>
		</dependency>


		<!--
		https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
		<dependency>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>exec-maven-plugin</artifactId>
			<version>3.3.0</version>
		</dependency>

		<dependency>
			<groupId>TAF</groupId>
			<artifactId>TAF-WebServices</artifactId>
			<version>${SkriptmateVersion}</version>
		</dependency>
		<dependency>
			<groupId>TAF</groupId>
			<artifactId>TAF-GenericUtility</artifactId>
			<version>${SkriptmateVersion}</version>
		</dependency>
		<dependency>
			<groupId>TAF</groupId>
			<artifactId>TAF-Web</artifactId>
			<version>0.0.3</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.pdfbox</groupId>
					<artifactId>pdfbox</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>TAF</groupId>
			<artifactId>TAF-Reporting</artifactId>
			<version>${SkriptmateVersion}</version>
		</dependency>

	
	
		
		<!--https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.0-M2</version>
		</dependency>

		<!--https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>

		<!-- Dependencies for Selenium -->
		<!--https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.16.1</version>
		</dependency>


		<!--https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-support -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-support</artifactId>
			<version>4.16.1</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>4.13.0</version>
		</dependency>

		<dependency>
			<groupId>com.codeborne</groupId>
			<artifactId>phantomjsdriver</artifactId>
			<version>1.5.0</version>
		</dependency>
		<!-- testng dependencies -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.10.2</version>
		</dependency>

		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.82</version>

		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>7.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.1.0-alpha1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>3.7.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/fontbox -->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>fontbox</artifactId>
			<version>3.0.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>7.18.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>7.18.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>7.18.0</version>
		</dependency>


		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>5.8.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
		 <dependency> <groupId>io.cucumber</groupId>
		<artifactId>cucumber-junit</artifactId> 
			<version>4.7.1</version> </dependency> 

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>4.1.2</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-cucumber7-jvm</artifactId>
			<version>2.27.0</version>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/io.qameta.allure/allure-java-commons -->
		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-java-commons</artifactId>
			<version>2.27.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>gherkin</artifactId>
			<version>28.0.0</version>
		</dependency>


		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.17.1</version>
		</dependency>
		<!-- Report portal -->
		<dependency>
			<groupId>com.epam.reportportal</groupId>
			<artifactId>agent-java-cucumber4</artifactId>
			<version>5.2.2</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>klov-reporter</artifactId>
			<version>5.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.1.1</version>
		</dependency>


		<!--
		https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber7-adapter</artifactId>
			<version>1.14.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.2.1-jre</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
			<version>4.0.0-M1</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.glassfish.jersey.connectors/jersey-apache-connector -->
		<dependency>
			<groupId>org.glassfish.jersey.connectors</groupId>
			<artifactId>jersey-apache-connector</artifactId>
			<version>3.1.7</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>4.0.0-M1</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>2.17.1</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>

		<dependency>
			<!-- Dependency added for Winium -->
			<groupId>com.github.2gis.winium</groupId>
			<artifactId>winium-webdriver</artifactId>
			<version>0.1.0-1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.paulhammant/ngwebdriver -->
		<dependency>
			<groupId>com.paulhammant</groupId>
			<artifactId>ngwebdriver</artifactId>
			<version>1.2</version>
		</dependency>


		<!--
		https://mvnrepository.com/artifact/com.epam.reportportal/agent-java-testng -->
		<dependency>
			<groupId>com.epam.reportportal</groupId>
			<artifactId>agent-java-testng</artifactId>
			<version>5.4.2</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/com.epam.reportportal/logger-java-log4j -->
		<dependency>
			<groupId>com.epam.reportportal</groupId>
			<artifactId>logger-java-log4j</artifactId>
			<version>5.2.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>4.0.0</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.apache.httpcomponents.core5/httpcore5 -->
		<dependency>
			<groupId>org.apache.httpcomponents.core5</groupId>
			<artifactId>httpcore5</artifactId>
			<version>5.3-beta1</version>
		</dependency>

		<dependency>
			<groupId>org.aeonbits.owner</groupId>
			<artifactId>owner</artifactId>
			<version>1.0.12</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.13</version>
			<scope>test</scope>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.apache-extras.beanshell/bsh -->
		<dependency>
			<groupId>org.apache-extras.beanshell</groupId>
			<artifactId>bsh</artifactId>
			<version>2.0b6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox-io -->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox-io</artifactId>
			<version>3.0.2</version>
		</dependency>


		<!--
		https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.2</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.2</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<!--<version>9.2.3</version> -->
			<version>9.0.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.14.17</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/cglib/cglib -->
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>3.3.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.9.0</version>
		</dependency>


		<!-- Dependencies for maven execution -->
		<dependency>
			<groupId>com.sun.speech</groupId>
			<artifactId>freetts</artifactId>
			<version>1.2.2</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/freetts-1.2.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>pCloudy-java-connector</groupId>
			<artifactId>pCloudy-java-connector</artifactId>
			<version>11.0.3</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/pCloudy-java-connector-11.0.3.jar</systemPath>
		</dependency>


		<!-- Dependencies for GenRocket -->
		<dependency>
			<groupId>com.genRocket</groupId>
			<artifactId>genRocket</artifactId>
			<version>3.5.21.2</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/genrocket-3.5.21.2.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.genRocket</groupId>
			<artifactId>gr-engine</artifactId>
			<version>3.5.21.8</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/gr-engine-3.5.21.8.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.genRocket</groupId>
			<artifactId>gr-receivers</artifactId>
			<version>3.5.21.11</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/gr-receivers-3.5.21.11.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.genRocket</groupId>
			<artifactId>gr-generators</artifactId>
			<version>3.5.21.10</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/gr-generators-3.5.21.10.jar</systemPath>
		</dependency>

		

		<!-- Needed by junit -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>com.atlassian.connect</groupId>
			<artifactId>ac-play-java_2.10</artifactId>
			<version>0.10.1</version>
			<scope>system</scope>
			<systemPath>
				${project.basedir}/src/main/resources/lib/ac-play-java_2.10-0.10.1.jar</systemPath>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	
	</dependencies>
</project>